# ge-b

./: .dockerignore  .gcloudignore  .gitignore  .terraform.lock.hcl  Dockerfile  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  a.json  categories.csv  categories.json  credentials.json  docker-compose.yml  environment.yml  main.tf  pyproject.toml  requirements-app.txt  requirements.txt  terraform.tfstate  terraform.tfstate.backup  test.json  test.py
app/: env.py  main.py  utils.py
app/routes/: cron.py  frontend.py  kdcapital.py  pipeline.py  scraper.py  shared.py  task.py
cloud_function/: launch.sh  main.py
launcher/: main.py
scraping/: Dockerfile  scraper.py  utils.py
scraping/sites/: kdcapital.py
scripts/: build-push-deploy.sh  deploy-image.sh  launch-job-local.sh  run-local-docker.sh  run-local-server.sh  run-local.sh
scripts/app/: deploy.sh  env.sh  run-docker.sh  run-local.sh
scripts/scraping/: deploy.sh  env.sh  run-docker.sh  run-local.sh  test-task.sh
