[tool.poetry]
name = "ge-b"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.2.1"
python_path = "^0.1.3"
cytoolz = "^0.10.1"
tqdm = "^4.46.0"
httpx = "^0.12.1"
fastapi = "^0.54.1"
python-multipart = "^0.0.5"
uvicorn = "^0.11.5"
pypeln = "^0.4.3"
pandas = "^1.0.5"
pyppeteer = "^0.2.2"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
