[tool.poetry]
name = "ge-b"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.2.1"
tqdm = "^4.46.0"
pyppeteer = "^0.2.2"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
