[tool.poetry]
name = "ge-b"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.2.1"
tqdm = "^4.46.0"
pyppeteer = "^0.2.2"
httpx = "^0.16.1"
debugpy = "^1.2.1"
pulumi = "^2.16.2"
pulumi-gcp = "^4.6.0"
google-api-python-client = "^1.12.8"
pulumi-docker = "^2.5.0"
google-cloud-storage = "^1.35.0"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
